--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,7 @@
     "file-saver": "^2.0.5",
     "framer-motion": "^12.24.10",
     "lucide-react": "^0.562.0",
+    "pdfjs-dist": "^5.4.624",
     "postcss": "^8.5.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
